syntax = "proto3";

option go_package = "github.com/matf-pp/2022_MATDAQ/api";

package user_service;

service User {
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  rpc DecreaseMoney (DecreaseMoneyRequest) returns (DecreaseMoneyResponse) {}
}

message LoginUserRequest {
  string username = 1;
  int32 money = 2;
}

message LoginUserResponse {
}

message DecreaseMoneyRequest {
  string username = 1;
  int32 moneyAmount = 2;
}

message DecreaseMoneyResponse {
}

